# debts-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
bot/: app.py  set_bot_commands.py
src/: constants.py  credentials.py
src/data/: config.py  credentials.py  db_interface.py  model.py  redis_interface.py
src/handlers/: __init__.py  common.py  constants.py  delete.py  help.py  payment.py  start.py  statistics.py  user_chat_handlers.py  utils.py
src/interfaces/: db_interface.py  db_model.py  redis_interface.py
src/utils/: balances_processing.py  callbacks_data.py  decorators.py  keyboards.py  set_bot_commands.py  state_groups.py  transfering_depts.py  transferring_debts.py
tools/: lock-versions.sh
