[tool.poetry]
name = "debts-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Egor Biryukov <egor.ig.bir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
redis = "^4.3.4"
psycopg2-binary = "^2.9.3"
sqlalchemy-json = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

